feature: add chunking API
